--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Adam Matulka",
   "license": "ISC",
   "dependencies": {
+    "dayjs": "^1.10.4",
     "moment": "^2.29.1",
     "parcel-bundler": "^1.12.4",
     "react": "^17.0.1",
